--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "15"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "120"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,17 +284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of the digits in 1245 is 12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sum_digits(number: int) -> int:\n",
     "    summation = 0\n",
@@ -314,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +315,7 @@
        "27"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +378,7 @@
        "3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,17 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of the even digits in 12345 is 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sum_evens(number: int) -> int:\n",
     "    sum = 0\n",
@@ -449,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,17 +462,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No, 9 is not contained in 5487\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def contains(number: int, digit: int) -> bool:\n",
     "    while number != 0:\n",
@@ -508,20 +484,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def contains(number: int, digit: int) -> bool:\n",
     "    if is_one_digit(number):\n",
@@ -534,12 +499,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that computes the power function."
+    "### Write a function that computes the power function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,72 +520,96 @@
     "    while exponent > 0:\n",
     "       result = result * base\n",
     "       exponent = exponent - 1\n",
-    "    return result\n",
-    "\n",
-    "def vanessa():\n",
-    "    base: int = int(input('Insert the base: '))\n",
-    "    exponent: int = int(input('Insert the exponent'))\n",
-    "    answer = power(base, exponent)\n",
-    "    print(f'{base} ^ {exponent} = {answer}')"
+    "    return result"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that computes the multiplication function."
+    "Recursive version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 * 5 = 25\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def power(base: int, exponent: int) -> int:\n",
+    "    if exponent == 1:\n",
+    "        return base\n",
+    "    else:\n",
+    "        return base * power(base, exponent - 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that computes the multiplication function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def multiply(first: int, second: int) -> int:\n",
     "    result = 0\n",
     "    while second > 0:\n",
     "        result = result + first\n",
     "        second = second - 1\n",
-    "    return result\n",
-    "\n",
-    "def vanessa():\n",
-    "    first: int = int(input('Insert the first number: '))\n",
-    "    second: int = int(input('Insert the second number'))\n",
-    "    answer = multiply(first, second)\n",
-    "    print(f'{first} * {second} = {answer}')\n",
-    "\n",
-    "vanessa()"
+    "    return result\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that returns the reverse of a given natural number N ."
+    "Recursive version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The reverse of 5487 is 7845\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def multiply(first: int, second: int) -> int:\n",
+    "    if second == 1:\n",
+    "        return first\n",
+    "    else:\n",
+    "        return first + multiply(first, second - 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that returns the reverse of a given natural number N ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def reverse(number: int) -> int:\n",
     "    rev = 0\n",
@@ -621,27 +617,51 @@
     "        remainder = number % 10\n",
     "        rev = rev * 10 + remainder\n",
     "        number = number // 10\n",
-    "    return rev\n",
-    "\n",
-    "def vanessa():\n",
-    "    number = int(input('Insert the number: '))\n",
-    "    answer = reverse(number)\n",
-    "    print(f'The reverse of {number} is {answer}')\n",
-    "\n",
-    "vanessa()"
+    "    return rev\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Write a function that checks if a given natural number N is Armstrong "
+    "Recursive version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo(number: int) -> int:\n",
+    "    num = count_digits(number)\n",
+    "    return power(10, num)\n",
+    "\n",
+    "\n",
+    "def reverse(number: int) -> int:\n",
+    "    if is_one_digit(number):\n",
+    "        return number\n",
+    "    else:\n",
+    "        return foo(number // 10) * (number % 10) + reverse(number // 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that checks if a given natural number N is Armstrong "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +670,7 @@
        "False"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,8 +692,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that returns the number of times a given digit appears in a\n",
-    "given natural number N ."
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_armstrong(number: int) -> bool:\n",
+    "    return compute_sum(number, count_digits(number)) == number\n",
+    "\n",
+    "def compute_sum(number: int, num_digits: int) -> int:\n",
+    "        if is_one_digit(number):\n",
+    "            return power(number, num_digits) \n",
+    "        else:\n",
+    "            return power((number % 10), num_digits) + compute_sum(number // 10, num_digits)\n",
+    "\n",
+    "is_armstrong(153)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that returns the number of times a given digit appears in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -697,42 +759,69 @@
     "      if remainder == digit:\n",
     "         counter = counter + 1\n",
     "      number = number // 10\n",
-    "   return counter\n",
-    "\n",
-    "number = int(input('Insert the number: '))\n",
-    "digit = int(input('Insert the digit: '))\n",
-    "\n",
-    "count = frequency(number, digit)\n",
-    "print(f\"There are {count} {digit}'s in {number}\")"
+    "   return counter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program that calculates with how many zeroes the factorial of a given\n",
-    "number ends."
+    "Recursive version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def frequency(number: int, digit: int) -> int:\n",
+    "    if is_one_digit(number):\n",
+    "        return 1 if number == digit else 0\n",
+    "    elif get_last_digit(number) == digit:\n",
+    "        return 1 + frequency(number // 10, digit)\n",
+    "    else:\n",
+    "        return 0 + frequency(number // 10, digit)\n",
+    "frequency(5675, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a program that calculates with how many zeroes the factorial of a given number ends."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,6 +839,37 @@
     "        fact = fact // 10\n",
     "\n",
     "count_zeros(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_zeros(factorial: int) -> int:\n",
+    "    if get_last_digit(factorial) != 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1 + count_zeros(factorial // 10)"
    ]
   },
   {
@@ -792,7 +912,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that returns the maximum digit in a given natural number N."
+    "### Write a function that returns the maximum digit in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -828,7 +955,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that returns the minimum digit in a given natural number N."
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_max(number: int) -> int:\n",
+    "    if is_one_digit(number):\n",
+    "        return number\n",
+    "    else:\n",
+    "        return max(number % 10, get_max(number // 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that returns the minimum digit in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -846,6 +1011,20 @@
     "        number = number // 10\n",
     "    return min"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1081,20 +1260,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "fizz\n",
+      "4\n",
+      "5\n",
+      "fizz\n",
+      "7\n",
+      "8\n",
+      "fizz\n",
+      "10\n",
+      "11\n",
+      "fizz\n",
+      "13\n",
+      "14\n",
+      "fizz\n",
+      "16\n",
+      "17\n",
+      "fizz\n",
+      "19\n",
+      "20\n",
+      "fizz\n",
+      "22\n",
+      "23\n",
+      "fizz\n",
+      "25\n",
+      "26\n",
+      "fizz\n",
+      "28\n",
+      "29\n",
+      "fizz\n"
+     ]
     }
    ],
+   "source": [
+    "for number in range(1, 31):\n",
+    "    if number % 3 == 0:\n",
+    "        print('fizz')\n",
+    "    else:\n",
+    "        print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(1, 6):\n",
+    "    print(number, sep='a', end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function print in module builtins:\n",
+      "\n",
+      "print(*args, sep=' ', end='\\n', file=None, flush=False)\n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "    \n",
+      "    sep\n",
+      "      string inserted between values, default a space.\n",
+      "    end\n",
+      "      string appended after the last value, default a newline.\n",
+      "    file\n",
+      "      a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    flush\n",
+      "      whether to forcibly flush the stream.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
