--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +82,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_list(number: int) -> int:\n",
+    "    sum = 0\n",
+    "    for number in range(1, number + 1):\n",
+    "        sum = sum + number\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Write an algorithm that computes the factorial of a positive number N"
    ]
   },
@@ -117,28 +137,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def factorial(number: int) -> int:\n",
     "    if number == 1:\n",
     "        return 1\n",
     "    else:\n",
-    "        return number * factorial(number - 1)\n",
-    "    \n",
-    "factorial(5)"
+    "        return number * factorial(number - 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(number: int) -> int:\n",
+    "    product = 1\n",
+    "    for number in range(1, number + 1):\n",
+    "        product = product * number\n",
+    "    return product"
    ]
   },
   {
@@ -199,6 +226,27 @@
     "        return 1 + count_digits(number // 10)\n",
     "    \n",
     "count_digits(4578)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "def count_items(sequence: List[int]) -> int:\n",
+    "    count = 0\n",
+    "    for item in sequence:\n",
+    "        count = count + 1\n",
+    "    return count"
    ]
   },
   {
@@ -272,6 +320,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_evens(sequence: List[int]) -> int:\n",
+    "    result = 0\n",
+    "    for number in sequence:\n",
+    "        if is_even(number):\n",
+    "            result = result + 1\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Write an algorithm that computes the sum of digits in a given natural number N"
    ]
   },
@@ -328,6 +408,26 @@
     "        return get_last_digit(number) + sum_digits(number // 10)\n",
     "\n",
     "sum_digits(65790)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_sum(seqence: List[int]) -> int:\n",
+    "    sum = 0\n",
+    "    for number in seqence:\n",
+    "        sum = sum + number\n",
+    "    return sum"
    ]
   },
   {
@@ -398,6 +498,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_odds(sequence: List[int]) -> int:\n",
+    "    count = 0\n",
+    "    for number in sequence:\n",
+    "        if is_odd(number):\n",
+    "            count = count + 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Write an algorithm that computes the sum of even digits in a given natural number N"
    ]
   },
@@ -450,6 +571,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Write a function that checks if a given natural number N contains a given digit d."
    ]
   },
@@ -493,6 +628,37 @@
     "        return number == digit\n",
     "    else:\n",
     "        return (get_last_digit(number) == digit) or contains(number // 10, digit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def contains(sequence: List[int], key: int) -> bool:\n",
+    "    for number in sequence:\n",
+    "        if number == key:\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
@@ -617,7 +783,7 @@
     "        remainder = number % 10\n",
     "        rev = rev * 10 + remainder\n",
     "        number = number // 10\n",
-    "    return rev\n"
+    "    return rev"
    ]
   },
   {
