--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,6 @@
     "    if is_one_digit(number): return 1\n",
     "    else:\n",
     "        return 1 + count_digits(number // 10)\n",
-    "    \n",
     "count_digits(4578)"
    ]
   },
@@ -1196,7 +1195,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that calculates the sum of the first N squares."
+    "### Write a function that calculates the sum of the first N squares."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -1219,8 +1225,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that counts the number of digits greater than or equal to a\n",
-    "given digit d in a given natural number N."
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_squares(number: int) -> int:\n",
+    "    if number == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return power(number, 2) + sum_squares(number - 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that counts the number of digits greater than or equal to a given digit d in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -1254,8 +1286,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that computes the logarithm of a given natural number N\n",
-    "in a given base b."
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_if(number: int, digit: int) -> int:\n",
+    "    if is_one_digit(number):\n",
+    "        return 1 if number >= digit else 0\n",
+    "    elif (number % 10) >= digit:\n",
+    "        return 1 + count_if(number // 10, digit)\n",
+    "    else:\n",
+    "        return 0 + count_if(number // 10, digit)\n",
+    "    \n",
+    "count_if(658942, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function that computes the logarithm of a given natural number N in a given base b."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -1281,7 +1354,6 @@
     "        counter = counter + 1\n",
     "        number = number // base\n",
     "    return counter\n",
-    "\n",
     "log(100, 2)"
    ]
   },
@@ -1289,8 +1361,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function div which, given two positive integers a and\n",
-    "b, return the quotient"
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log(number: int, base: int) -> int:\n",
+    "    if number <= 1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1 + log(number // 10, base)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function div which, given two positive integers a and b, return the quotient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -1324,8 +1422,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function mod which, given two positive integers a and\n",
-    "b, return the quotient"
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def div(number: int, divisor: int) -> int:\n",
+    "    if number < divisor:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1 + div(number - divisor, divisor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a function mod which, given two positive integers a and b, return the quotient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterative version"
    ]
   },
   {
@@ -1350,7 +1474,30 @@
     "        number = number - divisor\n",
     "    return number\n",
     "\n",
-    "mod(13, 2)"
+    "mod(13, 2)\n",
+    "\n",
+    "\n",
+    "4 % 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mod(number: int, divisor: int) -> int:\n",
+    "    if number < divisor:\n",
+    "        return number\n",
+    "    else:\n",
+    "        return mod(number - divisor, divisor)"
    ]
   },
   {
