--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -4,18 +4,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook solves the exercises in the Python workout book"
+    "For this exercise\n",
+    "- Write a function (guessing_game) that takes no arguments.\n",
+    "- When run, the function chooses a random integer between 0 and 100 (inclusive).\n",
+    "- Then ask the user to guess what number has been chosen.\n",
+    "- Each time the user enters a guess, the program indicates one of the following:\n",
+    "  - Too high\n",
+    "  - Too low\n",
+    "  - Just right\n",
+    "- If the user guesses correctly, the program exits. Otherwise, the user is asked to\n",
+    "try again.\n",
+    "- The program only exits after the user guesses correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "def guessing_game():\n",
+    "    number = randint(0, 100)\n",
+    "    while True:\n",
+    "      guess = int(input('Insert your guess: '))\n",
+    "      if guess == number:\n",
+    "        print('Just right')\n",
+    "        break\n",
+    "      elif guess < number:\n",
+    "        print('Too low')\n",
+    "      else:\n",
+    "        print('Too high')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Modify this program, such that it gives the user only three chances to guess the\n",
+    "correct number. If they try three times without success, the program tells them\n",
+    "that they didn’t guess in time and then exits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too low\n",
+      "Too low\n",
+      "Too low\n"
+     ]
+    }
+   ],
+   "source": [
+    "def guessing_game():\n",
+    "    number = randint(0, 100)\n",
+    "    for trial in range(3):\n",
+    "        guess = int(input('Insert your guess: '))\n",
+    "        if guess == number:\n",
+    "          print('Just right')\n",
+    "          break\n",
+    "        elif guess < number:\n",
+    "          print('Too low')\n",
+    "        else:\n",
+    "          print('Too high')\n",
+    "guessing_game()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in [1, 2, 3, 4, 5, 6]:\n",
+    "    print(number)\n",
+    "    continue\n",
+    "    print('Vanessa')\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
